[tool.poetry]
name = "ml_startup"
version = "0.1.0"
description = ""
authors = ["3voor <gonzalo.sanchezc@pucp.edu.pe>"]

[tool.poetry.dependencies]
python = "3.7.1"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
pydantic = "^1.7.3"
typer = "^0.3.2"
boto3 = "^1.16.59"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
